--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Torrent Web",
+  "name": "kitonga",
   "description": "Easily download torrents directly over http with this self-hosted app",
   "repository": "https://github.com/kihangasper/rentfree",
   "logo": "http://i.imgur.com/fdzPLb2.png",
